lib/libparam/src/client/rparam_client.h

void cmd_rparam_setup(void);
int rparam_get_full_table(param_index_t * mem, int node, int port, int mem_id, int timeout);
int rparam_get_single(void * out, uint16_t addr, param_type_t type, int size, int mem_id, int node, int port, int timeout);
uint8_t rparam_get_uint8(void * out, uint16_t addr, int mem_id, int node, int port, int timeout);
uint16_t rparam_get_uint16(void * out, uint16_t addr, int mem_id, int node, int port, int timeout);
uint32_t rparam_get_uint32(void * out, uint16_t addr, int mem_id, int node, int port, int timeout);
uint64_t rparam_get_uint64(void * out, uint16_t addr, int mem_id, int node, int port, int timeout);