lib/libparam/bindings/python/pyparam.py


PARAM_FLOAT = (PARAM_DOUBLE + 1) # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 42

PARAM_STRING = (PARAM_FLOAT + 1) # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 42

PARAM_DATA = (PARAM_STRING + 1) # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 42

param_type_t = enum_anon_1 # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 42

# /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 45
for _lib in _libs.values():
    try:
        sum1 = (c_uint16).in_dll(_lib, 'sum1')
        break
    except:
        pass

# /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 46
for _lib in _libs.values():
    try:
        sum2 = (c_uint16).in_dll(_lib, 'sum2')
        break
    except:
        pass

# /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 47
try:
    index = (c_int).in_dll(_libs['param'], 'index')
except:
    pass

# /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 65
class struct_param_table_s(Structure):
    pass

struct_param_table_s.__slots__ = [
    'addr',
    'type',
    'size',
    'count',
    'flags',
    'name',
]
struct_param_table_s._fields_ = [
    ('addr', c_uint16),
    ('type', param_type_t),
    ('size', c_uint8),
    ('count', c_uint8),
    ('flags', c_uint8),
    ('name', c_char * 14),
]

param_table_t = struct_param_table_s # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 65

# /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 73
class struct_param_index_s(Structure):
    pass

param_callback_func = CFUNCTYPE(UNCHECKED(None), c_uint16, POINTER(struct_param_index_s)) # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 68

struct_param_index_s.__slots__ = [
    'mem_id',
    'table',
    'count',
    'read',
    'write',
    'physaddr',
    'framaddr',
    'lock',
    'lock_inited',
    'callback',
]
struct_param_index_s._fields_ = [
    ('mem_id', c_uint8),
    ('table', POINTER(param_table_t)),
    ('count', c_uint),
    ('read', CFUNCTYPE(UNCHECKED(POINTER(None)), c_uint16, c_size_t)),
    ('write', CFUNCTYPE(UNCHECKED(None), c_uint16, c_size_t, POINTER(None), c_uint8)),
    ('physaddr', POINTER(None)),
    ('framaddr', c_uint16),
    ('lock', POINTER(None)),
    ('lock_inited', c_int),
    ('callback', param_callback_func),
]

param_index_t = struct_param_index_s # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 84

param_mem = c_uint8 # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 86

enum_rparam_action_e = c_int # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 97

RPARAM_GET = 0 # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 97

RPARAM_REPLY = 85 # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 97

RPARAM_SET = 255 # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 97

RPARAM_TABLE = 68 # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 97

RPARAM_COPY = 119 # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 97

RPARAM_LOAD = 136 # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 97

RPARAM_SAVE = 153 # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 97

RPARAM_CLEAR = 170 # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 97

rparam_action = enum_rparam_action_e # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 97

enum_rparam_reply_e = c_int # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 106

RPARAM_SET_OK = 1 # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 106

RPARAM_LOAD_OK = 2 # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 106

RPARAM_SAVE_OK = 3 # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 106

RPARAM_COPY_OK = 4 # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 106

RPARAM_CLEAR_OK = 5 # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 106

RPARAM_ERROR = 255 # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 106

rparam_reply = enum_rparam_reply_e # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 106

# /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 117
class struct_anon_2(Structure):
    pass

struct_anon_2.__slots__ = [
    '_from',
    'to',
]
struct_anon_2._fields_ = [
    ('_from', c_uint8),
    ('to', c_uint8),
]

# /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 121
class struct_anon_3(Structure):
    pass

struct_anon_3.__slots__ = [
    'id',
]
struct_anon_3._fields_ = [
    ('id', c_uint8),
]

# /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 113
class union_anon_4(Union):
    pass

union_anon_4.__slots__ = [
    'addr',
    'packed',
    'filename',
    'copy',
    'clear',
]
union_anon_4._fields_ = [
    ('addr', c_uint16 * 0),
    ('packed', c_uint8 * 0),
    ('filename', c_char * 0),
    ('copy', struct_anon_2),
    ('clear', struct_anon_3),
]

# /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 125
class struct_rparam_frame_s(Structure):
    pass

struct_rparam_frame_s.__slots__ = [
    'action',
    'mem',
    'length',
    'checksum',
    'unnamed_1',
]
struct_rparam_frame_s._anonymous_ = [
    'unnamed_1',
]
struct_rparam_frame_s._fields_ = [
    ('action', rparam_action),
    ('mem', c_uint8),
    ('length', c_uint16),
    ('checksum', c_uint16),
    ('unnamed_1', union_anon_4),
]

rparam_query = struct_rparam_frame_s # /home/johan/git/pygnd/lib/libparam/include/param/param_types.h: 125

# /home/johan/git/pygnd/lib/libparam/include/param/param_string.h: 20
if hasattr(_libs['param'], 'param_find_name'):
    param_find_name = _libs['param'].param_find_name
    param_find_name.argtypes = [POINTER(param_table_t), c_size_t, String]
    param_find_name.restype = POINTER(param_table_t)

# /home/johan/git/pygnd/lib/libparam/include/param/param_string.h: 29
if hasattr(_libs['param'], 'param_find_addr'):
    param_find_addr = _libs['param'].param_find_addr
    param_find_addr.argtypes = [POINTER(param_table_t), c_size_t, c_uint16]
    param_find_addr.restype = POINTER(param_table_t)

# /home/johan/git/pygnd/lib/libparam/include/param/param_string.h: 36
if hasattr(_libs['param'], 'param_list'):
    param_list = _libs['param'].param_list
    param_list.argtypes = [POINTER(param_index_t), c_int]
    param_list.restype = None

# /home/johan/git/pygnd/lib/libparam/include/param/param_string.h: 43
if hasattr(_libs['param'], 'param_list_simple'):
    param_list_simple = _libs['param'].param_list_simple
    param_list_simple.argtypes = [POINTER(param_index_t), c_int]
    param_list_simple.restype = None

# /home/johan/git/pygnd/lib/libparam/include/param/param_string.h: 52
if hasattr(_libs['param'], 'param_from_string'):
    param_from_string = _libs['param'].param_from_string
    param_from_string.argtypes = [POINTER(param_table_t), String, POINTER(None)]
    param_from_string.restype = c_int

# /home/johan/git/pygnd/lib/libparam/include/param/param_string.h: 64
if hasattr(_libs['param'], 'param_to_string'):
    param_to_string = _libs['param'].param_to_string
    param_to_string.argtypes = [POINTER(param_table_t), POINTER(c_uint8), c_int, POINTER(None), c_int, c_int]
    param_to_string.restype = c_int

# /home/johan/git/pygnd/lib/libparam/include/param/param_serializer.h: 19
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'param_betoh'):
        continue
    param_betoh = _lib.param_betoh
    param_betoh.argtypes = [param_type_t, POINTER(None)]
    param_betoh.restype = c_int
    break

# /home/johan/git/pygnd/lib/libparam/include/param/param_serializer.h: 27
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'param_htobe'):
        continue
    param_htobe = _lib.param_htobe
    param_htobe.argtypes = [param_type_t, POINTER(None)]
    param_htobe.restype = c_int
    break

# /home/johan/git/pygnd/lib/libparam/include/param/param_serializer.h: 41
if hasattr(_libs['param'], 'param_serialize'):
    param_serialize = _libs['param'].param_serialize
    param_serialize.argtypes = [POINTER(param_index_t), POINTER(c_uint16), c_uint, POINTER(c_uint8), c_int, c_int, c_int, c_int]
    param_serialize.restype = c_int

# /home/johan/git/pygnd/lib/libparam/include/param/param_serializer.h: 55
if hasattr(_libs['param'], 'param_serialize_item'):
    param_serialize_item = _libs['param'].param_serialize_item
    param_serialize_item.argtypes = [POINTER(param_table_t), c_uint16, POINTER(c_uint8), POINTER(c_uint16), c_uint, POINTER(None), c_int, c_int]
    param_serialize_item.restype = c_int

# /home/johan/git/pygnd/lib/libparam/include/param/param_serializer.h: 67
if hasattr(_libs['param'], 'param_deserialize'):
    param_deserialize = _libs['param'].param_deserialize
    param_deserialize.argtypes = [POINTER(param_index_t), POINTER(c_uint8), c_int, c_int, c_int, c_int]
    param_deserialize.restype = c_int

# /home/johan/git/pygnd/lib/libparam/include/param/param_serializer.h: 80
if hasattr(_libs['param'], 'param_deserialize_item'):
    param_deserialize_item = _libs['param'].param_deserialize_item
    param_deserialize_item.argtypes = [POINTER(param_table_t), c_uint16, POINTER(param_index_t), POINTER(None), c_int, c_int, c_int]
    param_deserialize_item.restype = c_int

# /home/johan/git/pygnd/lib/libparam/src/client/rparam_client.h: 14
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'cmd_rparam_setup'):
        continue
    cmd_rparam_setup = _lib.cmd_rparam_setup
    cmd_rparam_setup.argtypes = []
    cmd_rparam_setup.restype = None
    break

# /home/johan/git/pygnd/lib/libparam/src/client/rparam_client.h: 15
if hasattr(_libs['param'], 'rparam_get_full_table'):
    rparam_get_full_table = _libs['param'].rparam_get_full_table
    rparam_get_full_table.argtypes = [POINTER(param_index_t), c_int, c_int, c_int, c_int]
    rparam_get_full_table.restype = c_int

# /home/johan/git/pygnd/lib/libparam/src/client/rparam_client.h: 16
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'rparam_get_single'):
        continue
    rparam_get_single = _lib.rparam_get_single
    rparam_get_single.argtypes = [POINTER(None), c_uint16, param_type_t, c_int, c_int, c_int, c_int, c_int]
    rparam_get_single.restype = c_int
    break

# /home/johan/git/pygnd/lib/libparam/src/client/rparam_client.h: 35
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'rparam_get_uint8'):
        continue
    rparam_get_uint8 = _lib.rparam_get_uint8
    rparam_get_uint8.argtypes = [POINTER(None), c_uint16, c_int, c_int, c_int, c_int]
    rparam_get_uint8.restype = c_uint8
    break

# /home/johan/git/pygnd/lib/libparam/src/client/rparam_client.h: 36
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'rparam_get_uint16'):
        continue
    rparam_get_uint16 = _lib.rparam_get_uint16
    rparam_get_uint16.argtypes = [POINTER(None), c_uint16, c_int, c_int, c_int, c_int]
    rparam_get_uint16.restype = c_uint16
    break

# /home/johan/git/pygnd/lib/libparam/src/client/rparam_client.h: 37
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'rparam_get_uint32'):
        continue
    rparam_get_uint32 = _lib.rparam_get_uint32
    rparam_get_uint32.argtypes = [POINTER(None), c_uint16, c_int, c_int, c_int, c_int]
    rparam_get_uint32.restype = c_uint32
    break

# /home/johan/git/pygnd/lib/libparam/src/client/rparam_client.h: 38
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'rparam_get_uint64'):
        continue
    rparam_get_uint64 = _lib.rparam_get_uint64
    rparam_get_uint64.argtypes = [POINTER(None), c_uint16, c_int, c_int, c_int, c_int]
    rparam_get_uint64.restype = c_uint64
    break
